fix(swagger+backend): Cookie発行をPOSTからHEADに変更
