# 01-LandingPage/swagger/output/v1/typescript/model/themeCookieSchema.ts
@@ -1,15 +1,0 @@
-/**
- * Landing Page API
- * This is Landing Page API
- *
- * OpenAPI spec version: 1.0.0
- * 
- *
- * NOTE: This class is auto generated by the swagger code generator program.
- * https://github.com/swagger-api/swagger-codegen.git
- * Do not edit the class manually.
- */
-
-export interface ThemeCookieSchema { 
-    theme?: string;
-}
